# impynb

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  qc.yml  semantic-release.yml  test.yml
impynb/: __init__.py  import_context.py  notebook_finder.py  notebook_loader.py
impynb/util/: __init__.py  get_notebook_path.py  is_runnable_cell.py  is_running_in_notebook.py
tests/: __init__.py  conftest.py  test_async.py  test_context_manager.py  test_exceptions_from_notebooks.py  test_ignore_cells.py  test_import_from_notebook.py  test_import_from_papermill.py  test_import_from_submodule.py  test_import_init_ipynb.py  test_import_namespaced_module.py  test_import_notebook_as_module.py  test_multiple_init_files.py
tests/test_package/: async_cells.ipynb  contains_ignorable_cells.ipynb  import_from_papermill_env_vars.ipynb  import_from_papermill_parameters.ipynb  import_notebook_relative_path.py  import_some_local_module.ipynb  raises_an_exception.ipynb  some_notebook_to_import.ipynb
tests/test_package/namespaced_module/: module.ipynb
tests/test_package/submodule/: is_in_a_submodule.ipynb
tests/test_package/submodule_with_init_ipynb/: __init__.ipynb  other_module.py
tests/test_package/submodule_with_multiple_init/: __init__.ipynb  __init__.py
